--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,6 +4,11 @@
 
     <uses-permission android:name="android.permission.INTERNET" />
 
+    <!-- To auto-complete the email text field in the login form with the user's emails -->
+    <uses-permission android:name="android.permission.GET_ACCOUNTS" />
+    <uses-permission android:name="android.permission.READ_PROFILE" />
+    <uses-permission android:name="android.permission.READ_CONTACTS" />
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -11,7 +16,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name="com.shiyan.activity.LoginActivity">
+        <activity android:name="com.shiyan.activity.SignInActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -27,7 +32,10 @@
 
         <activity android:name="com.shiyan.activity.SearchActivity" />
         <activity android:name="com.shiyan.activity.UserDetailsActivity" />
-        <activity android:name="com.shiyan.activity.TalkActivity"></activity>
+        <activity android:name="com.shiyan.activity.TalkActivity" />
+        <activity
+            android:name="com.shiyan.activity.SignUpActivity"
+            android:label="@string/title_activity_logup"></activity>
     </application>
 
 </manifest>
