--- a/app/build.gradle
+++ b/app/build.gradle
@@ -29,9 +29,11 @@ dependencies {
     testImplementation 'junit:junit:4.12'
     implementation "com.squareup.okhttp3:okhttp:3.10.0"
     implementation 'com.android.support:design:27.1.1'
+    implementation 'de.hdodenhof:circleimageview:2.1.0'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
-    compile "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
+//    implementation 'org.litepal.android:core:2.0.0'
 }
 
 apply plugin: 'kotlin-android'
