--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,40 +2,41 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.shiyan.dogdog">
 
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.INTERNET" />
-
-    <!-- To auto-complete the email text field in the login form with the user's emails -->
-    <uses-permission android:name="android.permission.GET_ACCOUNTS" />
-    <uses-permission android:name="android.permission.READ_PROFILE" />
-    <uses-permission android:name="android.permission.READ_CONTACTS" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
 
     <application
         android:allowBackup="true"
+        android:fullBackupContent="@xml/backup_descriptor"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name="com.shiyan.activity.SignInActivity">
+        <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".MainActivity" />
 
         <service
             android:name=".MainService"
             android:enabled="true"
             android:exported="true" />
 
+        <activity android:name="com.shiyan.activity.SignInActivity" />
         <activity android:name="com.shiyan.activity.SearchActivity" />
         <activity android:name="com.shiyan.activity.UserDetailsActivity" />
-        <activity android:name="com.shiyan.activity.TalkActivity" />
+        <activity
+            android:name="com.shiyan.activity.TalkActivity"
+            android:launchMode="singleTask" />
         <activity
             android:name="com.shiyan.activity.SignUpActivity"
-            android:label="@string/title_activity_logup"></activity>
+            android:label="@string/title_activity_logup" />
+        <activity android:name="com.shiyan.activity.AboutActivity"/>
     </application>
 
 </manifest>
