--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     package="com.shiyan.dogdog">
 
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
@@ -13,7 +14,8 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme">
+        android:theme="@style/AppTheme"
+        tools:ignore="GoogleAppIndexingWarning">
         <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -21,12 +23,6 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
-        <service
-            android:name=".MainService"
-            android:enabled="true"
-            android:exported="true" />
-
         <activity android:name="com.shiyan.activity.SignInActivity" />
         <activity android:name="com.shiyan.activity.SearchActivity" />
         <activity android:name="com.shiyan.activity.UserDetailsActivity" />
@@ -36,7 +32,12 @@
         <activity
             android:name="com.shiyan.activity.SignUpActivity"
             android:label="@string/title_activity_logup" />
-        <activity android:name="com.shiyan.activity.AboutActivity"/>
+        <activity android:name="com.shiyan.activity.AboutActivity" />
+
+        <service
+            android:name="im.penghao.sdk.MessageLooper"
+            android:enabled="true"
+            android:exported="true"></service>
     </application>
 
 </manifest>
